# simple-file-server

./: .gitignore  Dockerfile  app.py  docker-compose.sample.yml  pyproject.toml
.github/workflows/: docker.yml
